--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,11 @@
 ---
 import Hamburger from "./Hamburger.astro";
-import Navigation from "./Navigation.astro";
-import ThemeIcon from './ThemeIcon.astro';
+import Navigation from "./NavBar.astro";
 ---
 
 <header>
     <nav>
         <Hamburger />
-        <ThemeIcon />
         <Navigation />
     </nav>
 </header>
